# document-insight-engine

./: .dockerignore  .env.example  .env.profile.full  .env.profile.lite  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.aoc/: context.md  memory.md
.aoc/layouts/: aoc.hybrid.kdl
.aoc/skills/: .aoc-no-default-seed  manifest.toml
.aoc/stm/: current.md
.github/workflows/: ci.yml
.opencode/agents/: aoc-ops.md  teach.md
.opencode/commands/: prd.md  stm.md  teach-ask.md  teach-dive.md  teach-full.md
.opencode/skills/: .aoc-skill-sync  aoc-init-ops  aoc-workflow  memory-ops  prd-align  prd-dev  prd-intake  release-notes  skill-creator  (+7 more)
.taskmaster/: state.json
frontend/: __init__.py  app.py  client.py  progress.py  readiness.py  state.py
scripts/: _profile_common.sh  dev-api.sh  dev-full-up.sh  dev-lite-up.sh  dev-ui.sh  dev-up.sh  docker-full-up.sh  docker-lite-up.sh  docker-up.sh
src/: __init__.py
tests/: test_api.py  test_api_state_store.py  test_chunking.py  test_cloud_agent.py  test_compose.py  test_embeddings.py  test_evaluation_harness.py  test_extraction.py  test_extractor.py  test_frontend_app.py  test_frontend_client.py  test_frontend_readiness.py  test_frontend_state.py  test_fs_tools.py  test_gemini_client.py  test_google_parser.py  test_indexing.py  test_ingest.py  test_ingests_endpoint.py  test_local_agent_client.py  test_local_llm.py  test_orchestration.py  test_parsing.py  test_phase_validation.py  test_recent_ingestions.py  test_runtime_pipeline.py  test_schemas.py  test_settings.py
(+59 files in other folders)
