[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-insight-engine"
version = "0.1.0"
description = "Foundation for the document insight engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pillow>=10.0,<12.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "pymupdf>=1.24,<2.0",
  "pytesseract>=0.3.10,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "redisvl>=0.7,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]
ui = [
  "httpx>=0.27,<1.0",
  "streamlit>=1.41,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
